@@ -1,3 +1,10 @@
+2009-09-30  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* test_check.sh:
+	  Use mktemp to create a temporary directory.  Makes testsuite
+	  robust against parallel execution.  First buglet caught by
+	  buildbot.
+
 2009-07-29  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* test_check.sh:
